Changes on fill_descriptions and Page 1, with styles

--- a/ar.computrabajo/data/buenos_aires_p1.html
+++ b/ar.computrabajo/data/buenos_aires_p1.html
@@ -17,6 +17,7 @@
 
 
 </head>
+
 <body class="">
 <script>if (document.referrer && !document.referrer.includes("ar.computrabajo.com")) { var date = new Date; date.setTime(date.getTime() + 864e5); var expires = "; expires=" + date.toUTCString(); document.cookie = "extrfr=" + document.referrer + expires + "; path=/;domain=ar.computrabajo.com" }</script>
 <input id="useLoginSecure" type="hidden" value="true"/>
@@ -98,7 +99,18 @@
 <span class="b_primary_inv" data-login-button-desktop="">Login</span>
 <a class="b_primary js_login" data-access-menu="" href="https://candidato.ar.computrabajo.com/acceso/">Crear CV</a>
 </div>
-<style>@charset "UTF-8";.menu_header .img_user{height:35px;width:35px;margin-right:12px;display:inline-block;vertical-align:top}.menu_header .img_user img{border-radius:100px 55px 55px 90px/80px 82px 75px 79px}.menu_header .img_user .icon{width:35px;height:35px;border-radius:100px 55px 55px 90px/80px 82px 75px 79px;background-color:#fff;background-color:#FCC73B;margin-right:0}.menu_header .img_user+div p{text-align:left;margin:0;overflow:hidden;text-overflow:ellipsis;max-width:100%;white-space:nowrap;display:inline-block;font-weight:bold}.menu_header .img_user+div p:last-child{font-size:13px;display:block;font-weight:normal}.menu_header .icon{background:none;width:auto;height:auto;float:none}.menu_header .link,.menu_header a{display:inline-block;width:calc(100% + 55px);padding:15px 15px 15px 22px;color:#fff;position:relative;white-space:nowrap;margin-left:-22px;text-align:center}.menu_header .link .icon,.menu_header a .icon{-webkit-box-flex:25px;-ms-flex:25px 0 0px;flex:25px 0 0;margin-right:22px}.menu_header .link span,.menu_header a span{opacity:0.55}.menu_header .link.sel,.menu_header .link:hover,.menu_header a.sel,.menu_header a:hover{text-decoration:none}.menu_header .link.sel span,.menu_header .link:hover span,.menu_header a.sel span,.menu_header a:hover span{opacity:1}.menu_header .link.sel:before,.menu_header .link:hover:before,.menu_header a.sel:before,.menu_header a:hover:before{border-color:#fff}.menu_header .link:not(.sel):hover:before,.menu_header a:not(.sel):hover:before{opacity:0.3}.menu_header .link.new:after,.menu_header a.new:after{top:15px;right:auto;left:40px}.menu_header .opacity{opacity:0.5}.menu_header .opacity:hover{opacity:1}.menu_header .i_alerts,.menu_header .i_fav,.menu_header .i_noti,.menu_header .i_post,.menu_header .i_search{font-size:25px!important;zoom:1}.menu_header .i_avatar{border-radius:100px 55px 55px 90px/80px 82px 75px 79px;background-color:#fff;color:#0D3878;font-size:19px!important;padding:3px;display:inline-block!important}.menu_header .i_bullet{color:#fff;font-size:12px;background-image:none!important;opacity:1!important;text-align:center;padding-top:4px;position:relative;z-index:0;font-family:Arial,sans-serif!important;width:25px;height:25px}.menu_header .i_bullet:after,.menu_header .i_bullet:before{background-color:#EC6984;border-radius:50%;-webkit-box-sizing:border-box;box-sizing:border-box;content:"";display:block;position:absolute;z-index:-1}.menu_header .i_bullet:before{-webkit-animation:pulse-ring 1.25s cubic-bezier(0.215,0.61,0.355,1) 3 forwards;animation:pulse-ring 1.25s cubic-bezier(0.215,0.61,0.355,1) 3 forwards;height:300%;width:300%;left:-100%;top:-100%}.menu_header .i_bullet:after{-webkit-animation:pulse-dot 1.25s cubic-bezier(0.455,0.03,0.515,0.955) 3 both;animation:pulse-dot 1.25s cubic-bezier(0.455,0.03,0.515,0.955) 3 both;height:31px;left:-3px;top:-3px;width:31px}.menu_header .menu_inf{height:60px;background-color:#0D3878;position:fixed;left:0;bottom:0;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row;z-index:999999;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;-webkit-box-align:center;-ms-flex-align:center;align-items:center;width:100%;display:none;-webkit-transition:bottom ease-in-out 0.3s;transition:bottom ease-in-out 0.3s}.menu_header .menu_inf .link,.menu_header .menu_inf>a{padding:10px;margin:0;-webkit-box-flex:1;-ms-flex-positive:1;flex-grow:1;-ms-flex-preferred-size:0;flex-basis:0}.menu_header .menu_inf .link:before,.menu_header .menu_inf>a:before{display:none}.menu_header .menu_inf .link .icon,.menu_header .menu_inf>a .icon{margin:0 auto}.menu_header .menu_inf .link .i_avatar,.menu_header .menu_inf .link.sel,.menu_header .menu_inf .link.sel span,.menu_header .menu_inf .link:last-child span,.menu_header .menu_inf>a .i_avatar,.menu_header .menu_inf>a.sel,.menu_header .menu_inf>a.sel span,.menu_header .menu_inf>a:last-child span{opacity:1}.menu_header .menu_inf .link:last-child span:last-child,.menu_header .menu_inf>a:last-child span:last-child{opacity:0.5}.menu_header .menu_inf .link .img_user,.menu_header .menu_inf>a .img_user{margin:0 auto;height:25px;width:25px;float:none}.menu_header .menu_inf .link .img_user .icon,.menu_header .menu_inf>a .img_user .icon{width:25px;height:25px;color:#fff}.menu_header .menu_inf .link>span,.menu_header .menu_inf>a>span{display:block;margin-top:3px;font-size:11px;color:#fff;text-align:center;line-height:1}.menu_header .menu_inf .link .i_bullet,.menu_header .menu_inf>a .i_bullet{display:-webkit-box!important;display:-ms-flexbox!important;display:flex!important;padding-top:0;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;line-height:1}.menu_header .menu_inf.scroll{bottom:-65px;-webkit-transition:bottom ease-in-out 0.3s;transition:bottom ease-in-out 0.3s}@-webkit-keyframes pulse-ring{0%{-webkit-transform:scale(0.33);transform:scale(0.33)}80%,to{opacity:0}}@keyframes pulse-ring{0%{-webkit-transform:scale(0.33);transform:scale(0.33)}80%,to{opacity:0}}@-webkit-keyframes pulse-dot{0%{-webkit-transform:scale(0.8);transform:scale(0.8)}50%{-webkit-transform:scale(1);transform:scale(1)}to{-webkit-transform:scale(0.8);transform:scale(0.8)}}@keyframes pulse-dot{0%{-webkit-transform:scale(0.8);transform:scale(0.8)}50%{-webkit-transform:scale(1);transform:scale(1)}to{-webkit-transform:scale(0.8);transform:scale(0.8)}}@media only screen and (max-width:1023px){.menu_header .menu_inf{display:-webkit-box;display:-ms-flexbox;display:flex}#tagsave:not([class*=" save "]){display:none}.box_fix_menu{bottom:59px!important;-webkit-transition:bottom ease-in-out 0.3s!important;transition:bottom ease-in-out 0.3s!important;position:sticky!important}.box_fix_menu.btn_alert,.box_fix_menu.btn_cv_complete{bottom:70px!important}.box_fix_menu.b_seguir_fix{position:fixed!important}.box_fix_menu.tag.save{bottom:70px!important;position:fixed!important}.box_fix_menu.tooltip_help.with_side{bottom:140px!important;position:fixed!important;z-index:9999999999}.box_fix_menu.box_links_mobile{bottom:75px!important;position:fixed!important}.box_fix_no_menu{bottom:0!important;-webkit-transition:bottom ease-in-out 0.3s!important;transition:bottom ease-in-out 0.3s!important}.box_fix_no_menu.btn_alert,.box_fix_no_menu.btn_cv_complete{bottom:10px!important}.box_fix_no_menu.b_seguir_fix{position:fixed!important}.box_fix_no_menu.tag.save{bottom:10px!important;position:fixed!important}.box_fix_no_menu.tooltip_help.with_side{bottom:90px!important;position:fixed!important;z-index:99999999}.box_fix_no_menu.box_links_mobile{bottom:20px!important;position:fixed!important}}@media only screen and (max-width:768px){#MainContainer.show{z-index:999999999}}</style>
+<style>@charset "UTF-8";.menu_header .img_user{height:35px;width:35px;margin-right:12px;display:inline-block;vertical-align:top}.menu_header .img_user img{border-radius:100px 55px 55px 90px/80px 82px 75px 79px}.menu_header .img_user .icon{width:35px;height:35px;border-radius:100px 55px 55px 90px/80px 82px 75px 79px;background-color:#fff;background-color:#FCC73B;margin-right:0}.menu_header .img_user+div p{text-align:left;margin:0;overflow:hidden;text-overflow:ellipsis;max-width:100%;white-space:nowrap;display:inline-block;font-weight:bold}.menu_header .img_user+div p:last-child{font-size:13px;display:block;font-weight:normal}.menu_header .icon{background:none;width:auto;height:auto;float:none}.menu_header .link,.menu_header a{display:inline-block;width:calc(100% + 55px);padding:15px 15px 15px 22px;color:#fff;position:relative;white-space:nowrap;margin-left:-22px;text-align:center}.menu_header .link .icon,.menu_header a .icon{-webkit-box-flex:25px;-ms-flex:25px 0 0px;flex:25px 0 0;margin-right:22px}.menu_header .link span,.menu_header a span{opacity:0.55}.menu_header .link.sel,.menu_header .link:hover,.menu_header a.sel,.menu_header a:hover{text-decoration:none}.menu_header .link.sel span,.menu_header .link:hover span,.menu_header a.sel span,.menu_header a:hover span{opacity:1}.menu_header .link.sel:before,.menu_header .link:hover:before,.menu_header a.sel:before,.menu_header a:hover:before{border-color:#fff}.menu_header .link:not(.sel):hover:before,.menu_header a:not(.sel):hover:before{opacity:0.3}.menu_header .link.new:after,.menu_header a.new:after{top:15px;right:auto;left:40px}.menu_header .opacity{opacity:0.5}.menu_header .opacity:hover{opacity:1}.menu_header .i_alerts,.menu_header .i_fav,.menu_header .i_noti,.menu_header .i_post,.menu_header .i_search{font-size:25px!important;zoom:1}.menu_header .i_avatar{border-radius:100px 55px 55px 90px/80px 82px 75px 79px;background-color:#fff;color:#0D3878;font-size:19px!important;padding:3px;display:inline-block!important}.menu_header .i_bullet{color:#fff;font-size:12px;background-image:none!important;opacity:1!important;text-align:center;padding-top:4px;position:relative;z-index:0;font-family:Arial,sans-serif!important;width:25px;height:25px}.menu_header .i_bullet:after,.menu_header .i_bullet:before{background-color:#EC6984;border-radius:50%;-webkit-box-sizing:border-box;box-sizing:border-box;content:"";display:block;position:absolute;z-index:-1}.menu_header .i_bullet:before{-webkit-animation:pulse-ring 1.25s cubic-bezier(0.215,0.61,0.355,1) 3 forwards;animation:pulse-ring 1.25s cubic-bezier(0.215,0.61,0.355,1) 3 forwards;height:300%;width:300%;left:-100%;top:-100%}.menu_header .i_bullet:after{-webkit-animation:pulse-dot 1.25s cubic-bezier(0.455,0.03,0.515,0.955) 3 both;animation:pulse-dot 1.25s cubic-bezier(0.455,0.03,0.515,0.955) 3 both;height:31px;left:-3px;top:-3px;width:31px}.menu_header .menu_inf{height:60px;background-color:#0D3878;position:fixed;left:0;bottom:0;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-ms-flex-direction:row;flex-direction:row;z-index:999999;-webkit-box-pack:justify;-ms-flex-pack:justify;justify-content:space-between;-webkit-box-align:center;-ms-flex-align:center;align-items:center;width:100%;display:none;-webkit-transition:bottom ease-in-out 0.3s;transition:bottom ease-in-out 0.3s}.menu_header .menu_inf .link,.menu_header .menu_inf>a{padding:10px;margin:0;-webkit-box-flex:1;-ms-flex-positive:1;flex-grow:1;-ms-flex-preferred-size:0;flex-basis:0}.menu_header .menu_inf .link:before,.menu_header .menu_inf>a:before{display:none}.menu_header .menu_inf .link .icon,.menu_header .menu_inf>a .icon{margin:0 auto}.menu_header .menu_inf .link .i_avatar,.menu_header .menu_inf .link.sel,.menu_header .menu_inf .link.sel span,.menu_header .menu_inf .link:last-child span,.menu_header .menu_inf>a .i_avatar,.menu_header .menu_inf>a.sel,.menu_header .menu_inf>a.sel span,.menu_header .menu_inf>a:last-child span{opacity:1}.menu_header .menu_inf .link:last-child span:last-child,.menu_header .menu_inf>a:last-child span:last-child{opacity:0.5}.menu_header .menu_inf .link .img_user,.menu_header .menu_inf>a .img_user{margin:0 auto;height:25px;width:25px;float:none}.menu_header .menu_inf .link .img_user .icon,.menu_header .menu_inf>a .img_user .icon{width:25px;height:25px;color:#fff}.menu_header .menu_inf .link>span,.menu_header .menu_inf>a>span{display:block;margin-top:3px;font-size:11px;color:#fff;text-align:center;line-height:1}.menu_header .menu_inf .link .i_bullet,.menu_header .menu_inf>a .i_bullet{display:-webkit-box!important;display:-ms-flexbox!important;display:flex!important;padding-top:0;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;justify-content:center;line-height:1}.menu_header .menu_inf.scroll{bottom:-65px;-webkit-transition:bottom ease-in-out 0.3s;transition:bottom ease-in-out 0.3s}@-webkit-keyframes pulse-ring{0%{-webkit-transform:scale(0.33);transform:scale(0.33)}80%,to{opacity:0}}@keyframes pulse-ring{0%{-webkit-transform:scale(0.33);transform:scale(0.33)}80%,to{opacity:0}}@-webkit-keyframes pulse-dot{0%{-webkit-transform:scale(0.8);transform:scale(0.8)}50%{-webkit-transform:scale(1);transform:scale(1)}to{-webkit-transform:scale(0.8);transform:scale(0.8)}}@keyframes pulse-dot{0%{-webkit-transform:scale(0.8);transform:scale(0.8)}50%{-webkit-transform:scale(1);transform:scale(1)}to{-webkit-transform:scale(0.8);transform:scale(0.8)}}@media only screen and (max-width:1023px){.menu_header .menu_inf{display:-webkit-box;display:-ms-flexbox;display:flex}#tagsave:not([class*=" save "]){display:none}.box_fix_menu{bottom:59px!important;-webkit-transition:bottom ease-in-out 0.3s!important;transition:bottom ease-in-out 0.3s!important;position:sticky!important}.box_fix_menu.btn_alert,.box_fix_menu.btn_cv_complete{bottom:70px!important}.box_fix_menu.b_seguir_fix{position:fixed!important}.box_fix_menu.tag.save{bottom:70px!important;position:fixed!important}.box_fix_menu.tooltip_help.with_side{bottom:140px!important;position:fixed!important;z-index:9999999999}.box_fix_menu.box_links_mobile{bottom:75px!important;position:fixed!important}.box_fix_no_menu{bottom:0!important;-webkit-transition:bottom ease-in-out 0.3s!important;transition:bottom ease-in-out 0.3s!important}.box_fix_no_menu.btn_alert,.box_fix_no_menu.btn_cv_complete{bottom:10px!important}.box_fix_no_menu.b_seguir_fix{position:fixed!important}.box_fix_no_menu.tag.save{bottom:10px!important;position:fixed!important}.box_fix_no_menu.tooltip_help.with_side{bottom:90px!important;position:fixed!important;z-index:99999999}.box_fix_no_menu.box_links_mobile{bottom:20px!important;position:fixed!important}}@media only screen and (max-width:768px){#MainContainer.show{z-index:999999999}}
+
+
+.descripcion_scrapeada {
+    display: none !important;
+}
+
+[data-offers-grid-loading-container] {
+    display: none !important;
+}
+
+</style>
 <div class="menu_header" id="menu_bottom_container">
 <div class="menu_inf" id="menu_bottom">
 <div class="link" data-menu-icon="" data-path="https://ar.computrabajo.com">
@@ -4324,5 +4336,105 @@
   "@type": "ItemList"
 
 }] }</script>
+<script>
+document.addEventListener('DOMContentLoaded', function () {
+
+    const offers = document.querySelectorAll('.box_offer');
+    const detailBox = document.querySelector('[data-offers-grid-box-detail]');
+    const detailContainer = detailBox.querySelector('[data-offers-grid-detail-container]');
+
+    offers.forEach(offer => {
+        offer.addEventListener('click', () => {
+
+            // selección visual
+            document.querySelectorAll('.box_offer.sel').forEach(o => o.classList.remove('sel'));
+            offer.classList.add('sel');
+
+            const title   = offer.querySelector('h2')?.innerText || '';
+            const company = offer.querySelector('p:nth-of-type(1)')?.innerText || '';
+            const place   = offer.querySelector('p:nth-of-type(2)')?.innerText || '';
+            const descDiv = offer.querySelector('.descripcion_scrapeada');
+
+            if (!descDiv) return;
+
+            // EXTRAER EL TEXTO DE CADA <p>
+            const lines = Array.from(descDiv.querySelectorAll('p'))
+                .map(p => p.innerText.trim())
+                .filter(p => p.length > 0);
+
+            let html = "";
+
+            lines.forEach(line => {
+
+                // ---------- TITULOS ----------
+                if (/^(Descripción|Responsabilidades|Requisitos|Principales|Perfil|La empresa ofrece|Funciones|Sobre|Requerimientos)/i.test(line)) {
+                    html += `<h3 style="margin:20px 0 10px 0; font-size:18px; font-weight:bold;">${line}</h3>`;
+                    return;
+                }
+
+                // ---------- BULLETS: guiones ----------
+                if (/^\s*-\s*/.test(line)) {
+                    html += `<p style="margin:0 0 8px 0;">• ${line.replace(/^\s*-\s*/, "")}</p>`;
+                    return;
+                }
+
+                // ---------- BULLETS: asteriscos ----------
+                if (line.includes("*")) {
+                    html += `<p style="margin:0 0 8px 0;">• ${line.replace(/\*/g, "").trim()}</p>`;
+                    return;
+                }
+
+                // ---------- LÍNEAS CORTAS: info ----------
+                if (line.length < 25 &&
+                    /(A convenir|Jornada|Contrato|Presencial|Eventual|Indeterminado|Completa|Turnos|Part time)/i.test(line)) {
+                    html += `<p style="margin:0 0 10px 0; font-weight:bold;">${line}</p>`;
+                    return;
+                }
+
+                // ---------- DEFAULT: párrafo normal ----------
+                html += `<p style="margin:0 0 12px 0;">${line}</p>`;
+            });
+
+            // INSERTAR EN PANEL DERECHO
+            detailContainer.classList.remove('hide');
+
+            detailContainer.innerHTML = `
+                <div class="box_border" style="padding:20px;">
+
+                    <h1 class="fs22 fwB" style="margin-bottom:5px;">
+                        ${title}
+                    </h1>
+
+                    <p class="fwB" style="margin:0;">${company}</p>
+                    <p style="margin:0 0 15px 0;">${place}</p>
+
+                    <div style="margin:15px 0;">
+                        <button style="
+                            background:#0D3878;
+                            color:#fff;
+                            padding:10px 20px;
+                            border-radius:25px;
+                            border:none;
+                            font-weight:bold;
+                            cursor:pointer;">
+                            Postularme
+                        </button>
+                    </div>
+
+                    <div style="font-size:15px; line-height:1.5;">
+                        ${html}
+                    </div>
+
+                </div>
+            `;
+        });
+    });
+});
+</script>
+
+
+
+
+
 </input></body>
 </html>
